# pytest-perf

./: .dmypy.json  .gitignore  README.md  output.json  pyproject.toml
.github/workflows/: CI.yml
src/pytest_perf/: __init__.py  _cases.py
tests/: test_something.py
