[project]
name = "pytest-perf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomas Perez", email = "tomas.perez@coactive.ai" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "mypy>=1.9.0",
]

[tool.rye.scripts]
check-types = "dmypy run --timeout 60 -- src tests"
stop-deamon = "dmypy stop"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_perf"]
