[project]
name = "pytest-perf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomas Perez", email = "tomas.perez@coactive.ai" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "pytest-benchmark>=4.0.0",
]

[tool.rye.scripts]
check-types = "dmypy run --timeout 60 -- src tests"
stop-deamon = "dmypy stop"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = ["--import-mode=importlib", "--strict-markers"]
markers = [
    "fast: mark tests that run fast.",
    "slow: mark tests that run slowly.",
    "unit: mark unittest.",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_perf"]

[tool.ruff.lint]
preview = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
enum = { msg = "`enum` is banned: Python enums are not allowed. Use typing.Literal and typing.TypeAlias to build enums" }

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP001", "S101", "D"]
"scripts/*.py" = ["INP001", "D103"]
"src/customer_engine_api/migrations/**/*.py" = ["D103"]

[tool.ruff.lint.isort]
known-first-party = ["customer_engine_api"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[[tool.mypy.overrides]]
module = ["pytest_benchmark.fixture"]
ignore_missing_imports = true